# data_pipeline

./: .gitignore  pyproject.toml  requirements.txt
.cursor/: mcp.json
.github/workflows/: lint_on_push.yml  terraform-deploy-prd.yml  terraform-pr.yml
Dagster/: requirements.txt
Dagster/dagster-quickstart/: pyproject.toml
Dagster/my-project/: pyproject.toml
dbt/: .gitignore  README.md
dbt/dbt_project/: dbt_project.yml  package-lock.yml  profiles.yml
dbt/dbt_project/macros/: log_results.sql
dbt/dbt_project/models/: _sources_thelook_ecommerce.yml  products.sql  schema.yml  sources.yml
dbt/dbt_project/models/dwh/: dim_products.sql  (+3 more)
dbt/dbt_project/snapshots/: snapshot_check.sql
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/.github/workflows/: lint_on_push.yml
dbt_project/macros/: log_results.sql
dbt_project/models/: schema.yml  sources.yml
dbt_project/models/stg/: stg_customers.sql  stg_orders.sql  stg_payments.sql
dbt_project/query/: create_remote_function.sql
dbt_project/snapshots/: snapshot_check.sql  snapshot_product.sql  snapshot_product_add_last_updated_at.sql  snapshot_timestamp.sql  snapshot_timestamp_add_col.sql
description_project/: dbt_project.yml  profiles.yml
description_project/models/: description.md
prefect/: practice.ipynb
slack_notify/cloud_run_function/send-alert-to-slack/: main.py
terraform/archive_snowflake/: .envrc  provider.tf
terraform/archive_snowflake/.terraform/: terraform.tfstate
terraform/snowflake/: .terraform.lock.hcl  provider.tf  role.tf  warehouses.tf  warehouses_grant.tf
(+19 files in other folders)
