[project]
name = "dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "black>=25.1.0",
    "dbt-bigquery>=1.9.1",
    "dbt-core>=1.9.3",
    "dbt-osmosis>=1.1.13",
    "elementary-data>=0.16.1",
    "flake8>=7.1.2",
    "prefect[dbt]==2.20.9",
    "sqlfluff>=3.3.1",
]
